Company Format Fixed

--- a/companies/companies.html
+++ b/companies/companies.html
@@ -74,63 +74,117 @@
           <!--Here Starts the Main Body-->
 
           <main>
-
-               <div class="left-nav">
-                    <div class="nav-panel">
-                         <h2>Menu</h2>
-                         <div class="company-menu">
-                              <div class="stripe"></div>
-                              <div class="stripe"></div>
-                              <div class="stripe"></div>
-                         </div>
-                    </div>
-                    <div class="company-nav">
-
+               <h1 class="company-title">Companies Innovating in Biotech</h1>
+               <div class="page-display">
+                    <div class="company-list">
+                         <h2>TechBio</h2>
                          <ul>
                               <li>
-                                   <a href="techbio.html">TechBio</a>
+                                   <a href="relay.html">Relay Therapeutics (RLAY)</a>
                               </li>
                               <li>
-                                   <a href="crisprcompanies.html">CRISPR</a>
+                                   <a href="recursion.html">Recursion Pharma (RXRX)</a>
                               </li>
                               <li>
-                                   <a href="sequencing.html">Sequencing</a>
+                                   <a href="exscientia.html">Exsientia (EXAI)</a>
                               </li>
                               <li>
-                                   <a href="synbio.html">SynBio</a>
+                                   <a href="abcellera.html">AbCellera (ABCL)</a>
                               </li>
                               <li>
-                                   <a href="ipsccompanies.html">iPSC</a>
-                              </li>
-                              <li>
-                                   <a href="targeted.html">Targeted Therapies</a>
-                              </li>
-                              <li>
-                                   <a href="privatecrispr.html">Private CRISPR</a>
+                                   <a href="schrodinger.html">Shrodinger (SDGR)</a>
                               </li>
                          </ul>
-
                     </div>
 
-                    <section class="container">
-                         <h2 class="section-title">
-                              The Companies Innovating in Biotech
-                         </h2>
+                    <div class="company-list">
+                         <h2>CRISPR</h2>
+                         <ul>
+                              <li>
+                                   <a href="beam.html">Beam Therapeutics (BEAM)</a>
+                              </li>
+                              <li>
+                                   <a href="intellia.html">Intellia Therapeutics (NTLA)</a>
+                              </li>
+                              <li>
+                                   <a href="crispr.html">CRISPR Therapeutics (CRSP)</a>
+                              </li>
+                              <li>
+                                   <a href="verve.html">Verve Therapeutics (VERV)</a>
+                              </li>
+                              <li>
+                                   <a href="prime.html">Prime Medicines (PRME)</a>
+                              </li>
+                         </ul>
+                    </div>
 
-                         <p class="large-text">
-                              This section of the site is about all the companies behind the areas of innovation that are driving 
-                              biotech forward. These are the companies that could be driving the next big breakthroughs in science. 
-                              Many of them will most likely fail. The failure rate in biotechnology is over 90%. I think that is what 
-                              appeals to me as an investor in biotechnology. It is the treasure hunt of finding the next big breakthrough 
-                              company. I will cover the companies. I will profile each company with assessments of the company, science, 
-                              pipeline and valuation. This section will be the most opinionated part of this website. This will be my 
-                              thoughts and impressions based on my experience in investing in the biotech space. I will also disclose that 
-                              I am personally invested in many of these companies. You should always do your own research into any company 
-                              and consult a professional financial advisor before making any investment. 
-                         </p>
-                    </section>
+                    <div class="company-list">
+                         <h2>Sequencing</h2>
+                         <ul>
+                              <li>
+                                   <a href="invitae.html">Invitae (NVTA)</a>
+                              </li>
+                              <li>
+                                   <a href="pacbio.html">PacBio (PCAB)</a>
+                              </li>
+                              <li>
+                                   <a href="oxford.html">Oxford Nanopore (ONTTF)</a>
+                              </li>
+                         </ul>
+                    </div>
 
+                    <div class="company-list">
+                         <h2>SynBio</h2>
+                         <ul>
+                              <li>
+                                   <a href="ginkgo.html">Gingko Bioworks (DNA)</a>
+                              </li>
+                              <li>
+                                   <a href="twist.html">Twist Bioscience (TWST)</a>
+                              </li>
+                         </ul>
+                    </div>
+
+                    <div class="company-list">
+                         <h2>iPSC</h2>
+                         <ul>
+                              <li>
+                                   <a href="ipsc.html">Century Therapeutics (IPSC)</a>
+                              </li>
+                              <li>
+                                   <a href="sana.html">Sana Biotechnology (SANA)</a>
+                              </li>
+                              <li>
+                                   <a href="fate.html">Fate Therapeutics (FATE)</a>
+                              </li>
+                              <li>
+                                   <a href="caribou.html">Caribou Biosciences (CRBU)</a>
+                              </li>
+                         </ul>
+                    </div>
+
+                    <div class="company-list">
+                         <h2>Targeted Therapies</h2>
+                         <ul>
+                              <li>
+                                   <a href="blueprint.html">Blueprint Medicines (BPMC)</a>
+                              </li>
+                              <li>
+                                   <a href="mirati.html">Mirati Therapeutics (MRTX)</a>
+                              </li>
+                              <li>
+                                   <a href="kymera.html">Kymera Therapeutics (KYMR)</a>
+                              </li>
+                              <li>
+                                   <a href="revolution.html">Revolution Medicines (RVMD)</a>
+                              </li>
+                              <li>
+                                   <a href="monterosa.html">MonteRosa Therapeutics (GLUE)</a>
+                              </li>
+                         </ul>
+                    </div>
                </div>
+               
           </main>
 
           <!--Here Starts the Footer-->
