--- a/companies/exscientia.html
+++ b/companies/exscientia.html
@@ -69,63 +69,7 @@
 
           <main>
 
-               <div class="left-nav">
-                    <div class="nav-panel">
-                         <h2>Menu</h2>
-                         <div class="company-menu">
-                              <div class="stripe"></div>
-                              <div class="stripe"></div>
-                              <div class="stripe"></div>
-                         </div>
-                    </div>
-                    <div class="company-nav">
-
-                         <ul>
-                              <li>
-                                   <a href="techbio.html">TechBio</a>
-                                   <ul>
-                                        <li>
-                                             <a href="relay.html">Relay (RLAY)</a>
-                                        </li>
-                                        <li>
-                                             <a href="recursion.html">Recursion (RXRX)</a>
-                                        </li>
-                                        <li>
-                                             <a href="exscientia.html">Exscientia (EXAI)</a>
-                                        </li>
-                                        <li>
-                                             <a href="abcellera.html">AbCellera (ABCL)</a>
-                                        </li>
-                                        <li>
-                                             <a href="schrodinger.html">Schrodinger (SDGR)</a>
-                                        </li>
-                                   </ul>
-                              </li>
-                              <li>
-                                   <a href="crisprcompanies.html">CRISPR</a>
-                              </li>
-                              <li>
-                                   <a href="sequencing.html">Sequencing</a>
-                              </li>
-                              <li>
-                                   <a href="synbio.html">SynBio</a>
-                              </li>
-                              <li>
-                                   <a href="ipsccompanies.html">iPSC</a>
-                              </li>
-                              <li>
-                                   <a href="targeted.html">Targeted Therapies</a>
-                              </li>
-                              <li>
-                                   <a href="privatecrispr.html">Private CRISPR</a>
-                              </li>
-                         </ul>
-
-                    </div>
-
-               </div>
-
-               <div>
+               <div class="company-container">
                     <p class="updated">Last Updated 1/13/2023</p>
 
 
@@ -256,9 +200,12 @@
                                    </a>
                               </p>
                          </section> 
-                         <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                     </div>
-               </div>     
+                    <div class="back-companies">
+                         <a href="companies.html">Back to Companies</a>
+                    </div>
+                    <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
+               </div>    
 
           </main>
 
