--- a/companies/intellia.html
+++ b/companies/intellia.html
@@ -69,62 +69,7 @@
 
           <main>
 
-               <div class="left-nav">
-                    <div class="nav-panel">
-                         <h2>Menu</h2>
-                         <div class="company-menu">
-                              <div class="stripe"></div>
-                              <div class="stripe"></div>
-                              <div class="stripe"></div>
-                         </div>
-                    </div>
-                    <div class="company-nav">
-
-                         <ul>
-                              <li>
-                                   <a href="techbio.html">TechBio</a>
-                              </li>
-                              <li>
-                                   <a href="crisprcompanies.html">CRISPR</a>
-                                   <ul>
-                                        <li>
-                                             <a href="beam.html">Beam (BEAM)</a>
-                                        </li>
-                                        <li>
-                                             <a href="intellia.html">Intellia (NTLA)</a>
-                                        </li>
-                                        <li>
-                                             <a href="crispr.html">CRISPR (CRSP)</a>
-                                        </li>
-                                        <li>
-                                             <a href="verve.html">Verve (VERV)</a>
-                                        </li>
-                                        <li>
-                                             <a href="prime.html">Prime (PRME)</a>
-                                        </li>
-                                   </ul>
-                              </li>
-                              <li>
-                                   <a href="sequencing.html">Sequencing</a>
-                              </li>
-                              <li>
-                                   <a href="synbio.html">SynBio</a>
-                              </li>
-                              <li>
-                                   <a href="ipsccompanies.html">iPSC</a>
-                              </li>
-                              <li>
-                                   <a href="targeted.html">Targeted Therapies</a>
-                              </li>
-                              <li>
-                                   <a href="privatecrispr.html">Private CRISPR</a>
-                              </li>
-                         </ul>
-
-                    </div>
-               </div>
-
-               <div>
+               <div class="company-container">
                     <p class="updated">Last Updated 1/12/2023</p>
 
                     <h1 class="company-name"><a href="https://www.intelliatx.com/">Intellia Therapeutics</a></h1>
@@ -264,8 +209,11 @@
                                    </a>
                               </p>
                          </section> 
-                         <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                     </div>
+                    <div class="back-companies">
+                         <a href="companies.html">Back to Companies</a>
+                    </div>
+                    <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
 
           </main>
