--- a/companies/kymera.html
+++ b/companies/kymera.html
@@ -69,62 +69,7 @@
 
           <main>
 
-               <div class="left-nav">
-                    <div class="nav-panel">
-                         <h2>Menu</h2>
-                         <div class="company-menu">
-                              <div class="stripe"></div>
-                              <div class="stripe"></div>
-                              <div class="stripe"></div>
-                         </div>
-                    </div>
-                    <div class="company-nav">
-
-                         <ul>
-                              <li>
-                                   <a href="techbio.html">TechBio</a>
-                              </li>
-                              <li>
-                                   <a href="crisprcompanies.html">CRISPR</a>
-                              </li>
-                              <li>
-                                   <a href="sequencing.html">Sequencing</a>
-                              </li>
-                              <li>
-                                   <a href="synbio.html">SynBio</a>
-                              </li>
-                              <li>
-                                   <a href="ipsccompanies.html">iPSC</a>
-                              </li>
-                              <li>
-                                   <a href="targeted.html">Targeted Therapies</a>
-                                   <ul>
-                                        <li>
-                                             <a href="blueprint.html">Blueprint (BPMC)</a>
-                                        </li>
-                                        <li>
-                                             <a href="mirati.html">Mirati (MRTX)</a>
-                                        </li>
-                                        <li>
-                                             <a href="kymera.html">Kymera (KYMR)</a>
-                                        </li>
-                                        <li>
-                                             <a href="revolution.html">Revolution (RVMD)</a>
-                                        </li>
-                                        <li>
-                                             <a href="monterosa.html">MonteRosa (GLUE)</a>
-                                        </li>
-                                   </ul>
-                              </li>
-                              <li>
-                                   <a href="privatecrispr.html">Private CRISPR</a>
-                              </li>
-                         </ul>
-
-                    </div>
-               </div>
-
-               <div>
+               <div class="company-container">
                     <p class="updated">Last Updated 1/14/2023</p>
 
                     <h1 class="company-name"><a href="https://www.kymeratx.com/">Kymera Therapeutics</a></h1>
@@ -246,8 +191,11 @@
                               </p>
                          </section> 
                     
-                         <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                     </div>
+                    <div class="back-companies">
+                         <a href="companies.html">Back to Companies</a>
+                    </div>
+                    <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
 
           </main>
