--- a/companies/twist.html
+++ b/companies/twist.html
@@ -75,53 +75,7 @@
 
           <main>
 
-               <div class="left-nav">
-                    <div class="nav-panel">
-                         <h2>Menu</h2>
-                         <div class="company-menu">
-                              <div class="stripe"></div>
-                              <div class="stripe"></div>
-                              <div class="stripe"></div>
-                         </div>
-                    </div>
-                    <div class="company-nav">
-
-                         <ul>
-                              <li>
-                                   <a href="techbio.html">TechBio</a>
-                              </li>
-                              <li>
-                                   <a href="crisprcompanies.html">CRISPR</a>
-                              </li>
-                              <li>
-                                   <a href="sequencing.html">Sequencing</a>
-                              </li>
-                              <li>
-                                   <a href="synbio.html">SynBio</a>
-                                   <ul>
-                                        <li>
-                                             <a href="ginkgo.html">Gingko (DNA)</a>
-                                        </li>
-                                        <li>
-                                             <a href="twist.html">Twist (TWST)</a>
-                                        </li>
-                                   </ul>
-                              </li>
-                              <li>
-                                   <a href="ipsccompanies.html">iPSC</a>
-                              </li>
-                              <li>
-                                   <a href="targeted.html">Targeted Therapies</a>
-                              </li>
-                              <li>
-                                   <a href="privatecrispr.html">Private CRISPR</a>
-                              </li>
-                         </ul>
-
-                    </div>
-               </div>
-
-               <div>
+               <div class="company-container">
                     <p class="updated">Last Updated 2/4/2023</p>
 
                     <h1 class="company-name"><a href="https://www.twistbioscience.com/">Twist Bioscience</a></h1>
@@ -216,8 +170,11 @@
                                    There are no Data Readouts as they run no clinical trials.
                               </p>
                          </section> 
-                         <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                     </div>
+                    <div class="back-companies">
+                         <a href="companies.html">Back to Companies</a>
+                    </div>
+                    <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
 
           </main>
