--- a/companies/fate.html
+++ b/companies/fate.html
@@ -69,59 +69,7 @@
 
           <main>
 
-               <div class="left-nav">
-                    <div class="nav-panel">
-                         <h2>Menu</h2>
-                         <div class="company-menu">
-                              <div class="stripe"></div>
-                              <div class="stripe"></div>
-                              <div class="stripe"></div>
-                         </div>
-                    </div>
-                    <div class="company-nav">
-
-                         <ul>
-                              <li>
-                                   <a href="techbio.html">TechBio</a>
-                              </li>
-                              <li>
-                                   <a href="crisprcompanies.html">CRISPR</a>
-                              </li>
-                              <li>
-                                   <a href="sequencing.html">Sequencing</a>
-                              </li>
-                              <li>
-                                   <a href="synbio.html">SynBio</a>
-                              </li>
-                              <li>
-                                   <a href="ipsccompanies.html">iPSC</a>
-                                   <ul>
-                                        <li>
-                                             <a href="ipsc.html">Century (IPSC)</a>
-                                        </li>
-                                        <li>
-                                             <a href="sana.html">Sana (SANA)</a>
-                                        </li>
-                                        <li>
-                                             <a href="fate.html">Fate (FATE)</a>
-                                        </li>
-                                        <li>
-                                             <a href="caribou.html">Caribou (CRBU)</a>
-                                        </li>
-                                   </ul>
-                              </li>
-                              <li>
-                                   <a href="targeted.html">Targeted Therapies</a>
-                              </li>
-                              <li>
-                                   <a href="privatecrispr.html">Private CRISPR</a>
-                              </li>
-                         </ul>
-
-                    </div>
-               </div>
-
-               <div>
+               <div class="company-container">
                     <p class="updated">Last Updated 1/14/2023</p>
 
                     <h1 class="company-name"><a href="https://fatetherapeutics.com/">Fate Therapeutics</a></h1>
@@ -215,8 +163,11 @@
                               </p>
                          </section> 
                     
-                         <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                     </div>
+                    <div class="back-companies">
+                         <a href="companies.html">Back to Companies</a>
+                    </div>
+                    <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
 
           </main>
