--- a/companies/oxford.html
+++ b/companies/oxford.html
@@ -69,56 +69,7 @@
 
           <main>
 
-               <div class="left-nav">
-                    <div class="nav-panel">
-                         <h2>Menu</h2>
-                         <div class="company-menu">
-                              <div class="stripe"></div>
-                              <div class="stripe"></div>
-                              <div class="stripe"></div>
-                         </div>
-                    </div>
-                    <div class="company-nav">
-
-                         <ul>
-                              <li>
-                                   <a href="techbio.html">TechBio</a>
-                              </li>
-                              <li>
-                                   <a href="crisprcompanies.html">CRISPR</a>
-                              </li>
-                              <li>
-                                   <a href="sequencing.html">Sequencing</a>
-                                   <ul>
-                                        <li>
-                                             <a href="invitae.html">Invitae (NVTA)</a>
-                                        </li>
-                                        <li>
-                                             <a href="pacbio.html">PacBio (PACB)</a>
-                                        </li>
-                                        <li>
-                                             <a href="oxford.html">Nanopore (ONTTF)</a>
-                                        </li>
-                                   </ul>
-                              </li>
-                              <li>
-                                   <a href="synbio.html">SynBio</a>
-                              </li>
-                              <li>
-                                   <a href="ipsccompanies.html">iPSC</a>
-                              </li>
-                              <li>
-                                   <a href="targeted.html">Targeted Therapies</a>
-                              </li>
-                              <li>
-                                   <a href="privatecrispr.html">Private CRISPR</a>
-                              </li>
-                         </ul>
-
-                    </div>
-               </div>
-
-               <div>
+               <div class="company-container">
                     <p class="updated">Last Updated 1/31/2023</p>
 
                     <h1 class="company-name"><a href="https://nanoporetech.com/">Oxford Nanopore</a></h1>
@@ -188,8 +139,11 @@
                                    they develop. They will continue to drive down cost per genome sequenced over time.
                               </p>
                          </section> 
-                         <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                     </div>
+                    <div class="back-companies">
+                         <a href="companies.html">Back to Companies</a>
+                    </div>
+                    <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
 
           </main>
